[Performance] Use singleton lists for single elements